kanc_pamoi/src/tests/sample_code/should_succeed/multi_file/no_warnings/no_clash_because_priv/src/priv_export2/sub.k
pub(super) use pack.data.Unit2 as Foo;
pub(pack) use pack.data.Unit2 as Bar;
