kanc_pamoi/src/tests/sample_code/should_fail/multi_file/bind/wildcard_downgrades_visibility/src/foo/bar.k
pub type Unit {
    c: Unit,
}

pub(pack) use Unit as Foo;
